[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Butterfly/Butterfly.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Butterfly/Butterfly.gd" type="Script" id=2]
[ext_resource path="res://Common/HitBox.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 3 )

[node name="Butterfly" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
move_speed = 100

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 5 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="RightFloorCheck" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 13 )
collide_with_areas = true

[node name="LeftFloorCheck" type="RayCast2D" parent="."]
position = Vector2( -6, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 13 )
collide_with_areas = true

[node name="RightWallCheck" type="RayCast2D" parent="."]
position = Vector2( 7, -7 )
enabled = true
exclude_parent = false
cast_to = Vector2( 1, 0 )
collide_with_areas = true

[node name="LeftWallCheck" type="RayCast2D" parent="."]
position = Vector2( -7, -7 )
enabled = true
exclude_parent = false
cast_to = Vector2( -1, 0 )
collide_with_areas = true

[node name="HitBox" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -14 )
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[editable path="HitBox"]
